chore: sync cli e2e tests to testplan

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "@azure/arm-subscriptions": "^3.0.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@mochajs/json-file-reporter": "^1.3.0",
     "@shared/eslint-config": "file:../eslint-config",
     "@shared/prettier-config": "file:../prettier-config",
     "@types/adm-zip": "^0.4.34",
