--- a/packages/api/src/schemas/envConfig.json
+++ b/packages/api/src/schemas/envConfig.json
@@ -33,7 +33,41 @@
         },
         "values": {
           "type": "object",
-          "description": "Configs to customize the Teams app manifest."
+          "description": "Configs to customize the Teams app manifest.",
+          "properties": {
+            "appName": {
+              "type": "object",
+              "description": "Teams app name.",
+              "properties": {
+                "short": {
+                  "type": "string",
+                  "description": "A short display name for teams app.",
+                  "maxLength": 30
+                },
+                "full": {
+                  "type": "string",
+                  "description": "The full name for teams app.",
+                  "maxLength": 100
+                }
+              }
+            },
+            "description": {
+              "type": "object",
+              "description": "Teams app description.",
+              "properties": {
+                "short": {
+                  "type": "string",
+                  "description": "A short description of the app used when space is limited. Maximum length is 80 characters.",
+                  "maxLength": 80
+                },
+                "full": {
+                  "type": "string",
+                  "description": "The full description of the app. Maximum length is 4000 characters.",
+                  "maxLength": 4000
+                }
+              }
+            }
+          }
         }
       },
       "required": ["values"]
