chore: sync cli e2e tests to testplan

--- a/packages/cli/.nycrc
+++ b/packages/cli/.nycrc
@@ -9,7 +9,10 @@
     "src/cmds/preview/depsChecker/**/*",
     "src/cmds/preview/preview.ts",
     "src/index.ts",
-    "cli.js"
+    "cli.js",
+    ".eslintrc.js",
+    ".prettierrc.js",
+    ".mocharc.js"
   ],
   "reporter": [
     "html",
