--- a/packages/api/src/schemas/envConfig.json
+++ b/packages/api/src/schemas/envConfig.json
@@ -42,32 +42,19 @@
                 "short": {
                   "type": "string",
                   "description": "A short display name for teams app.",
-                  "maxLength": 30
+                  "maxLength": 30,
+                  "minLength": 1
                 },
                 "full": {
                   "type": "string",
                   "description": "The full name for teams app.",
                   "maxLength": 100
                 }
-              }
-            },
-            "description": {
-              "type": "object",
-              "description": "Teams app description.",
-              "properties": {
-                "short": {
-                  "type": "string",
-                  "description": "A short description of the app used when space is limited. Maximum length is 80 characters.",
-                  "maxLength": 80
-                },
-                "full": {
-                  "type": "string",
-                  "description": "The full description of the app. Maximum length is 4000 characters.",
-                  "maxLength": 4000
-                }
-              }
+              },
+              "required": ["short"]
             }
-          }
+          },
+          "required": ["appName"]
         }
       },
       "required": ["values"]
