feat: api v2 change for solution plugin (#2168)
* feat: solution plugin

* fix: restore lock file

* fix

* fix: resource plugin API

* fix: resource plugin provision adapter

* fix: resource plugin signature

* remove dup

* fix

* fix

* fix

* fix

* fix compile error of core

* doc: api doc

* revert some format change

* fix: revert

* fix

* fix ut

* fix

* test: add v2 ut

--- a/packages/api/src/schemas/envConfig.json
+++ b/packages/api/src/schemas/envConfig.json
@@ -26,7 +26,7 @@
     },
     "manifest": {
       "type": "object",
-      "description": "The Teams App mainfest related configuration.",
+      "description": "The Teams App manifest related configuration.",
       "properties": {
         "description": {
           "type": "string"
@@ -44,5 +44,5 @@
     }
   },
   "additionalProperties": false,
-  "required": ["azure", "manifest"]
+  "required": ["manifest"]
 }
