--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -19,9 +19,9 @@
     "prepack": "npm run package",
     "test:e2e": "npm run test:e2e:clean && npm run test:e2e:parallel",
     "test:e2e:clean": "ts-node tests/e2e/clean.ts",
-    "test:e2e:parallel": "mocha --no-timeouts --parallel \"tests/e2e/**/*.tests.ts\"",
-    "test:e2e:smoke": "mocha --no-timeouts \"tests/e2e/smoke/*.tests.ts\"",
-    "test:e2e:others": "mocha --no-timeouts \"tests/e2e/{,!(smoke)}/*.tests.ts\"",
+    "test:e2e:parallel": "mocha --parallel \"tests/e2e/**/*.tests.ts\"",
+    "test:e2e:smoke": "mocha \"tests/e2e/smoke/*.tests.ts\"",
+    "test:e2e:others": "mocha \"tests/e2e/{,!(smoke)}/*.tests.ts\"",
     "test:unit": "nyc mocha \"tests/unit/**/*.tests.ts\"",
     "check-format": "prettier --list-different --config .prettierrc.json --ignore-path .prettierignore \"{src,tests}/**/*.ts\" \"*.{js,json}\"",
     "format": "prettier --write --config .prettierrc.json --ignore-path .prettierignore \"{src,tests}/**/*.ts\" \"*.{js,json}\"",
