feat: a/b test new survey on webview page

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -250,6 +250,10 @@
         {
           "command": "fx-extension.activateEnvironmentWithIcon",
           "when": "false"
+        },
+        {
+          "command": "fx-extension.openSurvey",
+          "when": "false"
         }
       ]
     },
@@ -291,6 +295,10 @@
       {
         "command": "fx-extension.openWelcome",
         "title": "Teams: Quick Start"
+      },
+      {
+        "command": "fx-extension.openSurvey",
+        "title": "Teams: Survey"
       },
       {
         "command": "fx-extension.openSamples",
