chore: sync cli e2e tests to testplan (#2206)
* chore: sync cli e2e tests to testplan

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -19,10 +19,10 @@
     "prepack": "npm run package",
     "test:e2e": "npm run test:e2e:clean && npm run test:e2e:parallel",
     "test:e2e:clean": "ts-node tests/e2e/clean.ts",
-    "test:e2e:parallel": "mocha --no-timeouts --parallel --require ts-node/register \"tests/e2e/**/*.tests.ts\"",
-    "test:e2e:smoke": "mocha --no-timeouts --require ts-node/register \"tests/e2e/smoke/*.tests.ts\"",
-    "test:e2e:others": "mocha --no-timeouts --require ts-node/register \"tests/e2e/{,!(smoke)}/*.tests.ts\"",
-    "test:unit": "nyc mocha --require ts-node/register \"tests/unit/**/*.tests.ts\"",
+    "test:e2e:parallel": "mocha --parallel \"tests/e2e/**/*.tests.ts\"",
+    "test:e2e:smoke": "mocha \"tests/e2e/smoke/*.tests.ts\"",
+    "test:e2e:others": "mocha \"tests/e2e/{,!(smoke)}/*.tests.ts\"",
+    "test:unit": "nyc mocha \"tests/unit/**/*.tests.ts\"",
     "check-format": "prettier --list-different --config .prettierrc.json --ignore-path .prettierignore \"{src,tests}/**/*.ts\" \"*.{js,json}\"",
     "format": "prettier --write --config .prettierrc.json --ignore-path .prettierignore \"{src,tests}/**/*.ts\" \"*.{js,json}\"",
     "lint:fix": "eslint \"src/**/*.ts\" \"tests/**/*.ts\" --fix",
@@ -41,6 +41,7 @@
   "devDependencies": {
     "@azure/arm-subscriptions": "^3.0.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@mochajs/json-file-reporter": "^1.3.0",
     "@shared/eslint-config": "file:../eslint-config",
     "@shared/prettier-config": "file:../prettier-config",
     "@types/adm-zip": "^0.4.34",
