--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -63,6 +63,7 @@
     "js-base64": "^3.6.0",
     "js-yaml": "^4.0.0",
     "jsonschema": "^1.4.0",
+    "jsum": "^2.0.0-alpha.3",
     "jwt-decode": "3.1.2",
     "klaw": "^3.0.0",
     "md5": "^2.3.0",
@@ -99,6 +100,7 @@
     "@types/fs-extra": "^9.0.9",
     "@types/glob": "^7.1.3",
     "@types/js-yaml": "^4.0.0",
+    "@types/jsum": "^0.1.0",
     "@types/jwt-decode": "^3.1.0",
     "@types/klaw": "^3.0.1",
     "@types/lodash": "4.14.117",
