--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -185,6 +185,11 @@
           "command": "fx-extension.activateEnvironmentWithIcon",
           "when": "view == teamsfx-environment && viewItem == environment",
           "group": "inline@3"
+        },
+        {
+          "command": "fx-extension.grantPermission",
+          "when": "view == teamsfx-environment && viewItem == environment",
+          "group": "inline@3"
         }
       ],
       "editor/title/run": [
@@ -249,6 +254,10 @@
         },
         {
           "command": "fx-extension.activateEnvironmentWithIcon",
+          "when": "false"
+        },
+        {
+          "command": "fx-extension.grantPermission",
           "when": "false"
         }
       ]
@@ -405,6 +414,12 @@
         "title": "Activate environment",
         "icon": "$(check)",
         "enablement": "fx-extension.isMultiEnvEnabled"
+      },
+      {
+        "command": "fx-extension.grantPermission",
+        "title": "Grant permission",
+        "icon": "$(person-add)",
+        "enablement": "fx-extension.isMultiEnvEnabled && fx-extension.isRemoteCollaborateEnabled"
       }
     ],
     "taskDefinitions": [
