perf: add icon for grant permission

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -170,25 +170,25 @@
         },
         {
           "command": "fx-extension.viewEnvironment",
-          "when": "view == teamsfx-environment && viewItem == environment"
+          "when": "view == teamsfx-environment && viewItem =~ /environment/"
         },
         {
           "command": "fx-extension.viewEnvironmentWithIcon",
-          "when": "view == teamsfx-environment && viewItem == environment",
+          "when": "view == teamsfx-environment && viewItem =~ /environment/",
           "group": "inline@3"
         },
         {
           "command": "fx-extension.activateEnvironment",
-          "when": "view == teamsfx-environment && viewItem == environment"
+          "when": "view == teamsfx-environment && viewItem =~ /environment/"
         },
         {
           "command": "fx-extension.activateEnvironmentWithIcon",
-          "when": "view == teamsfx-environment && viewItem == environment",
+          "when": "view == teamsfx-environment && viewItem =~ /environment/",
           "group": "inline@3"
         },
         {
           "command": "fx-extension.grantPermission",
-          "when": "view == teamsfx-environment && viewItem == environment",
+          "when": "view == teamsfx-environment && viewItem == environmentWithPermission",
           "group": "inline@3"
         }
       ],
