feat(vsc): show what's new after upgrading toolkit (#2239)
* feat(vsc): toolkit upgrade flow

* feat(vsc): show what's new after upgrading toolkit

* feat(vsc): show what is new

* fix(vsc): type

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -612,8 +612,9 @@
     "lint:staged": "lint-staged",
     "vscode:prepublish": "rimraf out && npm run package",
     "copy-files": "copyfiles -u 1 src/**/*.html src/**/*.css src/**/*.ps1 src/**/*.sh out/src/",
+    "copy-changelog-files": "copyfiles CHANGELOG.md out/resource",
     "copy-test-files": "copyfiles -u 1 test/**/*.ps1 test/**/*.sh out/test/",
-    "compile": "tsc -p ./ && npm run copy-files",
+    "compile": "tsc -p ./ && npm run copy-files && npm run copy-changelog-files",
     "build": "rimraf out && npm run compile",
     "build-webpack": "rimraf out && webpack --mode development --config ./webpack.config.js",
     "build-failpoint": "rimraf out && npx ttsc -p ./",
