--- a/packages/fx-core/templates/plugins/resource/spfx/solution/manifest_multi_env.json
+++ b/packages/fx-core/templates/plugins/resource/spfx/solution/manifest_multi_env.json
@@ -2,7 +2,7 @@
     "$schema": "https://developer.microsoft.com/en-us/json-schemas/teams/v1.9/MicrosoftTeams.schema.json",
     "manifestVersion": "1.9",
     "packageName": "<%= componentNameUnescaped %>",
-    "id": "<%= componentId %>",
+    "id": "{{profile.fx-resource-appstudio.teamsAppId}}",
     "version": "1.0.0",
     "developer": {
         "name": "SPFx + Teams Dev",
