chore(multi-env): rename add env command

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -400,7 +400,7 @@
       },
       {
         "command": "fx-extension.addEnvironment",
-        "title": "Teams: Add new environment",
+        "title": "Teams: Create new environment copy",
         "icon": "$(add)",
         "enablement": "fx-extension.isMultiEnvEnabled"
       },
