--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -612,9 +612,9 @@
     "lint:staged": "lint-staged",
     "vscode:prepublish": "rimraf out && npm run package",
     "copy-files": "copyfiles -u 1 src/**/*.html src/**/*.css src/**/*.ps1 src/**/*.sh out/src/",
-    "copy-changelog-files": "copyfiles CHANGELOG.md out/resource",
+    "copy-whatisnew-files": "copyfiles WHATISNEW.md out/resource && copyfiles img/* out/resource",
     "copy-test-files": "copyfiles -u 1 test/**/*.ps1 test/**/*.sh out/test/",
-    "compile": "tsc -p ./ && npm run copy-files && npm run copy-changelog-files",
+    "compile": "tsc -p ./ && npm run copy-files && npm run copy-whatisnew-files",
     "build": "rimraf out && npm run compile",
     "build-webpack": "rimraf out && webpack --mode development --config ./webpack.config.js",
     "build-failpoint": "rimraf out && npx ttsc -p ./",
@@ -721,6 +721,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonschema": "^1.4.0",
+    "markdown-navbar": "^1.4.3",
     "sudo-prompt": "^9.2.1",
     "underscore": "^1.12.1",
     "vscode-extension-telemetry": "^0.2.9",
