--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -20,6 +20,8 @@ on:
 
 jobs:
   cd:
+    env:
+      NODE_OPTIONS: "--max-old-space-size=5120"
     runs-on: ubuntu-latest
 
     steps:
@@ -116,7 +118,7 @@ jobs:
           then
               git push -d origin $(git tag --points-at HEAD | grep templates | grep rc)
           fi
-      
+
       - name: generate templates
         run: |
           curl -sSL https://git.io/get-mo -o mo && chmod +x mo && sudo mv mo /usr/local/bin/
@@ -139,7 +141,7 @@ jobs:
           tag: "templates@0.0.0-alpha"
           artifacts: ./*.zip
           allowUpdates: true
-      
+
       - name: update tag
         uses: richardsimko/update-tag@v1
         if: ${{ (contains(steps.version-change.outputs.CHANGED, 'templates@') || contains(steps.version-change.outputs.CHANGED, '@microsoft/teamsfx')) && github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'rc' }}
@@ -163,7 +165,7 @@ jobs:
         uses: ncipollo/release-action@v1.7.3
         with:
           artifacts: ./*.zip
-          name: 'Release for ${{ steps.version-change.outputs.TEMPLATE_VERSION }}'
+          name: "Release for ${{ steps.version-change.outputs.TEMPLATE_VERSION }}"
           token: ${{ secrets.GITHUB_TOKEN }}
           tag: ${{ steps.version-change.outputs.TEMPLATE_VERSION }}
           allowUpdates: true
@@ -177,12 +179,12 @@ jobs:
         uses: ncipollo/release-action@v1.7.3
         with:
           artifacts: ./template-tags.txt
-          name: 'Template Tag List'
-          body: 'Release to maintain template tag list.'
+          name: "Template Tag List"
+          body: "Release to maintain template tag list."
           token: ${{ secrets.github_token }}
-          tag: 'template-tag-list'
-          allowUpdates: true  
-    
+          tag: "template-tag-list"
+          allowUpdates: true
+
       - name: cleanup templates
         run: rm -rf ./*.zip && git clean -df
 
@@ -190,18 +192,18 @@ jobs:
         if: ${{ contains(steps.version-change.outputs.CHANGED, 'function-extension') && github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'stable' }}
         uses: Azure/pipelines@v1
         with:
-          azure-devops-project-url: 'https://dev.azure.com/mseng/VSIoT'
-          azure-pipeline-name: 'Build Function Extension Release Artifacts' 
-          azure-devops-token: '${{ secrets.ADO_PAT }}'
+          azure-devops-project-url: "https://dev.azure.com/mseng/VSIoT"
+          azure-pipeline-name: "Build Function Extension Release Artifacts"
+          azure-devops-token: "${{ secrets.ADO_PAT }}"
 
       - name: trigger simpleauth azure build pipeline for stable release
         if: ${{ contains(steps.version-change.outputs.CHANGED, 'simpleauth') && github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'stable' }}
         uses: Azure/pipelines@v1
         with:
-          azure-devops-project-url: 'https://dev.azure.com/mseng/VSIoT'
-          azure-pipeline-name: 'Build Simple Auth Release Artifacts' 
-          azure-devops-token: '${{ secrets.ADO_PAT }}'
-      
+          azure-devops-project-url: "https://dev.azure.com/mseng/VSIoT"
+          azure-pipeline-name: "Build Simple Auth Release Artifacts"
+          azure-devops-token: "${{ secrets.ADO_PAT }}"
+
       - name: check build status and download assets for stable release
         if: ${{ contains(steps.version-change.outputs.CHANGED, 'simpleauth') && github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'stable' }}
         run: |
@@ -210,17 +212,17 @@ jobs:
           asset_id=$(echo $output | rev |cut -d ' ' -f 1 | rev)
           curl "https://dev.azure.com/mseng/_apis/resources/Containers/$asset_id/drop?itemPath=drop/Microsoft.TeamsFx.SimpleAuth_${{ steps.version-change.outputs.SIMPLEAUTH_VERSION_NUM }}.zip" -L -O -u :${{ secrets.ADO_PAT }}
           if [ ! -f Microsoft.TeamsFx.*.zip ]; then exit 1; fi
-      
+
       - name: build SimpleAuth on prerelease
         if: ${{ contains(steps.version-change.outputs.CHANGED, 'simpleauth') && (github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' && github.event.inputs.preid != 'stable') }}
         run: |
           dotnet build --configuration Release
           zip -r -j ../../Microsoft.TeamsFx.SimpleAuth_${{ steps.version-change.outputs.SIMPLEAUTH_VERSION_NUM }}.zip src/TeamsFxSimpleAuth/bin/Release/*
-        working-directory: ./packages/simpleauth  
+        working-directory: ./packages/simpleauth
 
       - name: download simpleauth to fx-core
         uses: nick-invision/retry@v2
-        with: 
+        with:
           timeout_minutes: 10
           max_attempts: 10
           retry_on: error
@@ -235,7 +237,7 @@ jobs:
         uses: ncipollo/release-action@v1.7.3
         with:
           token: ${{ secrets.CD_PAT }}
-          tag: 'simpleauth-${{steps.version-change.outputs.SIMPLEAUTH_VERSION_NUM}}'
+          tag: "simpleauth-${{steps.version-change.outputs.SIMPLEAUTH_VERSION_NUM}}"
           artifacts: Microsoft.TeamsFx.SimpleAuth_*.zip
 
       - name: publish simpleauth to github release page
@@ -272,7 +274,7 @@ jobs:
           file: ./packages/vscode-extension/package.json
           field: aiKey
           value: ${{ secrets.EXT_PUBLIC_AIKEY }}
-      
+
       - name: commit change on local
         if: ${{ github.event_name == 'workflow_dispatch' && (github.event.inputs.preid == 'stable' || github.event.inputs.preid == 'rc') }}
         run: |
@@ -307,7 +309,7 @@ jobs:
         uses: ncipollo/release-action@v1.7.3
         with:
           token: ${{ secrets.CD_PAT }}
-          tag: 'vscode-extension-${{ steps.version-change.outputs.EXTENSION_VERSION_NUM }}'
+          tag: "vscode-extension-${{ steps.version-change.outputs.EXTENSION_VERSION_NUM }}"
           artifacts: ./packages/**/*.vsix
           prerelease: true
 
@@ -319,7 +321,7 @@ jobs:
           tag: ${{ steps.version-change.outputs.EXTENSION_VERSION }}
           artifacts: ./packages/**/*.vsix
           prerelease: true
-      
+
       - name: release stable VSCode extension to github
         if: ${{ contains(steps.version-change.outputs.CHANGED, 'ms-teams-vscode-extension@') && !contains(steps.version-change.outputs.CHANGED, 'rc') && github.ref == 'refs/heads/main' }}
         uses: ncipollo/release-action@v1.7.3
