--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -19,6 +19,7 @@ jobs:
       CI_ENABLED: "true"
       M365_ACCOUNT_COLLABORATOR: ${{ secrets.TEST_COLLABORATOR_USER_NAME }}
       AZURE_DEVOPS_EXT_PAT: ${{ secrets.ADO_PAT }}
+      NODE_OPTIONS: "--max-old-space-size=5120"
 
     runs-on: [self-hosted, linux, 8cpu]
 
@@ -77,6 +78,7 @@ jobs:
           git push origin -f e2e
 
       - name: Clean the Repo
+        if: ${{ always() }}
         run: |
           rsync --delete-before -d /tmp/empty/ ./
 
