--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -77,6 +77,7 @@ jobs:
           git push origin -f e2e
 
       - name: Clean the Repo
+        if: ${{ always() }}
         run: |
           rsync --delete-before -d /tmp/empty/ ./
 
