--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -79,7 +79,7 @@ jobs:
       - name: Clean the Repo
         if: ${{ always() }}
         run: |
-          rsync --delete-before -d /tmp/empty/ ./
+          rm -rf "${{ github.workspace }}"
 
       - name: Sync to Azure DevOps Test Plan
         if: ${{ always() && github.ref == 'refs/heads/main' }}
