perf(collaboration): collaboration support for VSCode (#2292)
* perf: add list collaborator

* perf: add tooltip and remove useless code

* perf: add feature flag

* fix: update code logic

* perf(collaboration): add grant permission for VSCode (#2229)

* perf(collaboration): add grant permission for VSCode

* perf(collaboration): fix typo

Co-authored-by: turenlong <rentu@microsoft.com>

* perf: add icon for grant permission (#2236)

* perf(collaboration): refresh tree view after grant permission (#2238)

Co-authored-by: turenlong <rentu@microsoft.com>

* perf: update icon color (#2242)

* perf: fix app studio error handling (#2253)

* perf: refresh env treeview after sign in and sign out (#2255)

* perf: add progress bar for grant permission (#2258)

* perf: add progress bar for grant permission

* fix: fix comment

* perf: add check for aad when check permission (#2267)

* perf(collaboration): update refresh logic to avoid hang (#2266)

* perf(collaboration): update refresh logic to avoid hang

* perf(collaboration): refactor code

Co-authored-by: turenlong <rentu@microsoft.com>

* test: add unit test for remote collaborator (#2273)

* test: add unit test for remote collaborator

* fix: remove useless code

* perf(collaboration): add telemetry, log, update warning message (#2276)

* perf(collaboration): add telemetry, log, update warning message

* perf(collaboration): also send start event

Co-authored-by: turenlong <rentu@microsoft.com>

* perf(collaboration): fix test case error

* perf(collaboration): fix test case error

* perf(collaboration): fix npm run setup error

* perf(collaboration): try to fix Lint PR/check-uncommit error

* perf(collaboration): only expand active environment for collaborator list

* perf(collaboration): move tree view UI strings to Strings.json

* perf(collaboration): update subTreeItem show tooltip logic

Co-authored-by: KennethBWSong <63089166+KennethBWSong@us

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -182,20 +182,25 @@
         },
         {
           "command": "fx-extension.viewEnvironment",
-          "when": "view == teamsfx-environment && viewItem == environment"
+          "when": "view == teamsfx-environment && viewItem =~ /environment/"
         },
         {
           "command": "fx-extension.viewEnvironmentWithIcon",
-          "when": "view == teamsfx-environment && viewItem == environment",
+          "when": "view == teamsfx-environment && viewItem =~ /environment/",
           "group": "inline@3"
         },
         {
           "command": "fx-extension.activateEnvironment",
-          "when": "view == teamsfx-environment && viewItem == environment"
+          "when": "view == teamsfx-environment && viewItem =~ /environment/"
         },
         {
           "command": "fx-extension.activateEnvironmentWithIcon",
-          "when": "view == teamsfx-environment && viewItem == environment",
+          "when": "view == teamsfx-environment && viewItem =~ /environment/",
+          "group": "inline@3"
+        },
+        {
+          "command": "fx-extension.grantPermission",
+          "when": "view == teamsfx-environment && viewItem == environmentWithPermission",
           "group": "inline@3"
         }
       ],
@@ -261,6 +266,10 @@
         },
         {
           "command": "fx-extension.activateEnvironmentWithIcon",
+          "when": "false"
+        },
+        {
+          "command": "fx-extension.grantPermission",
           "when": "false"
         },
         {
@@ -425,6 +434,12 @@
         "title": "Activate environment",
         "icon": "$(check)",
         "enablement": "fx-extension.isMultiEnvEnabled"
+      },
+      {
+        "command": "fx-extension.grantPermission",
+        "title": "Grant permission",
+        "icon": "$(person-add)",
+        "enablement": "fx-extension.isMultiEnvEnabled && fx-extension.isRemoteCollaborateEnabled"
       }
     ],
     "taskDefinitions": [
