--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -182,20 +182,11 @@
         },
         {
           "command": "fx-extension.viewEnvironment",
-          "when": "view == teamsfx-environment && viewItem =~ /environment/"
-        },
-        {
-          "command": "fx-extension.viewEnvironment",
-          "when": "view == teamsfx-environment && viewItem == local"
+          "when": "view == teamsfx-environment && viewItem =~ /^environment|^local$/"
         },
         {
           "command": "fx-extension.viewEnvironmentWithIcon",
-          "when": "view == teamsfx-environment && viewItem =~ /environment/",
-          "group": "inline@3"
-        },
-        {
-          "command": "fx-extension.viewEnvironmentWithIcon",
-          "when": "view == teamsfx-environment && viewItem == local",
+          "when": "view == teamsfx-environment && viewItem =~ /^environment|^local$/",
           "group": "inline@3"
         },
         {
