--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -642,8 +642,7 @@
     "copy-whatisnew-files": "copyfiles WHATISNEW.md out/resource",
     "copy-test-files": "copyfiles -u 1 test/**/*.ps1 test/**/*.sh out/test/",
     "compile": "tsc -p ./ && npm run copy-files && npm run copy-whatisnew-files",
-    "build": "rimraf out && npm run compile",
-    "build-webpack": "rimraf out && webpack --mode development --config ./webpack.config.js && npm run compile",
+    "build": "rimraf out && webpack --mode development --config ./webpack.config.js && npm run compile",
     "build-failpoint": "rimraf out && npx ttsc -p ./",
     "watch": "webpack --watch --devtool nosources-source-map --info-verbosity verbose --config ./webpack.config.js",
     "package": "rimraf out && webpack --mode production --config ./webpack.config.js",
