--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -32,6 +32,7 @@
 /packages/cli/tests/e2e/frontend @hund030 @eriolchan @henzhang-ms
 /packages/cli/tests/e2e/bot @IvanJobs @eriolchan @YitongFeng-git
 /packages/cli/tests/e2e/scaffold @hund030 @eriolchan @YitongFeng-git @IvanJobs @hengzhang-ms
+/packages/cli/tests/e2e/multienv @a1exwang @dooriya @qinezh @xiaolang124 @kimizhu
 /packages/cli/tests/unit/commonlib @kimizhu @swatDong @kuojianlu @a1exwang @qinezh @XiaofuHuang @xiaolang124 @meifans @dooriya
 /packages/cli/tests/unit/cmds/preview @swatDong @kuojianlu @qinezh @a1exwang @meifans
 
