--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -678,7 +678,8 @@
     "lint:fix": "eslint --config .eslintrc.js package.json src test --ext .ts --fix --fix-type [problem,suggestion]",
     "lint": "eslint \"src/**/*.ts\" \"test/**/*.ts\"",
     "prepare": "npm run build",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "format-check": "if [ ! -z \"$(git diff --name-only HEAD..$npm_config_source -- .)\" ]; then npx prettier --config .prettierrc.js --write $(git diff --name-only HEAD..$npm_config_source -- . | cut -c 27- | xargs) --ignore-path .prettierignore; fi"
   },
   "devDependencies": {
     "@azure/arm-subscriptions": "^3.0.0",
