--- a/templates/package.json
+++ b/templates/package.json
@@ -4,7 +4,8 @@
   "private": "true",
   "license": "MIT",
   "scripts": {
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "format-check": "if [[ ! -z \"$(git diff --name-only HEAD..$npm_config_source -- .)\" ]]; then npx prettier --config .prettierrc.js --write $(git diff --name-only HEAD..$npm_config_source -- . | cut -c 11-) --ignore-path .prettierignore; fi"
   },
   "devDependencies": {
     "@shared/eslint-config": "file:../packages/eslint-config",
