--- a/.github/workflows/lint-pr.yml
+++ b/.github/workflows/lint-pr.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: amannn/action-semantic-pull-request@v3.4.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  
+
   check-uncommit:
     if: ${{ github.event_name == 'pull_request' && github.event.action != 'edited' }}
     runs-on: ubuntu-latest
@@ -24,6 +24,7 @@ jobs:
       - name: Checkout branch
         uses: actions/checkout@v2
         with:
+          fetch-depth: 0
           ref: ${{ github.event.pull_request.head.ref }}
           repository: ${{github.event.pull_request.head.repo.full_name}}
 
@@ -36,11 +37,16 @@ jobs:
         run: |
           npm run setup
 
+      - name: prettier check files in PR
+        run: |
+          npx lerna exec -- npm run format-check --source=${{ github.event.pull_request.base.ref }}
+
       - name: Check if there are changes
         id: changes
         uses: UnicornGlobal/has-changes-action@v1.0.11
-      
+
       - name: changes result
         if: steps.changes.outputs.changed == 1
-        run:
+        run: |
+          echo "there has some prettier format error, you may run npm run setup local, and check your commit files is formatted."
           exit 1
