--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -29,7 +29,7 @@
     "prepublishOnly": "npm run test:unit && npm run build",
     "package": "rimraf build && webpack --mode production --config ./webpack.config.js",
     "precommit": "lint-staged",
-    "format-check": "if [ ! -z \"$(git diff --name-only HEAD..$npm_config_source -- .)\" ]; then npx prettier --config .prettierrc.js --write $(git diff --name-only HEAD..$npm_config_source -- . | cut -c 18-) --ignore-path .prettierignore; fi"
+    "format-check": "bash ../../.github/scripts/lint-pr.sh $npm_config_source 18"
   },
   "dependencies": {
     "@apidevtools/swagger-parser": "^10.0.2",
