--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -423,6 +423,12 @@
         "enablement": "fx-extension.isMultiEnvEnabled"
       },
       {
+        "command": "fx-extension.refreshEnvironment",
+        "title": "Refresh environment",
+        "icon": "$(refresh)",
+        "enablement": "fx-extension.isMultiEnvEnabled"
+      },
+      {
         "command": "fx-extension.viewEnvironment",
         "title": "View environment",
         "enablement": "fx-extension.isMultiEnvEnabled"
