--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -28,8 +28,7 @@
     "prepare": "npm run build && node ./scripts/download-templates-zip.js",
     "prepublishOnly": "npm run test:unit && npm run build",
     "package": "rimraf build && webpack --mode production --config ./webpack.config.js",
-    "precommit": "lint-staged",
-    "format-check": "bash ../../.github/scripts/lint-pr.sh $npm_config_source 18"
+    "precommit": "lint-staged"
   },
   "dependencies": {
     "@apidevtools/swagger-parser": "^10.0.2",
