--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -27,8 +27,7 @@
     "format": "prettier --write --config .prettierrc.json --ignore-path .prettierignore \"{src,tests}/**/*.ts\" \"*.{js,json}\"",
     "lint:fix": "eslint \"src/**/*.ts\" \"tests/**/*.ts\" --fix",
     "lint": "eslint \"src/**/*.ts\" \"tests/**/*.ts\"",
-    "precommit": "lint-staged",
-    "format-check": "bash ../../.github/scripts/lint-pr.sh $npm_config_source 14"
+    "precommit": "lint-staged"
   },
   "keywords": [
     "teamsfx",
