--- a/packages/failpoint-ts/package.json
+++ b/packages/failpoint-ts/package.json
@@ -26,14 +26,29 @@
     "url": "https://github.com/OfficeDev/TeamsFx/issues"
   },
   "devDependencies": {
+    "@shared/eslint-config": "file:../eslint-config",
+    "@shared/prettier-config": "file:../prettier-config",
     "@types/chai": "^4.2.21",
     "@types/mocha": "^8.2.3",
     "@types/node": "^16.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
     "chai": "^4.3.4",
+    "eslint": "^7.22.0",
+    "lint-staged": "^10.5.4",
     "mocha": "^9.0.2",
     "nyc": "^15.1.0",
     "ts-node": "^10.1.0",
+    "tslint-config-prettier": "^1.18.0",
     "ttypescript": "^1.5.12",
     "typescript": "^4.3.5"
+  },
+  "lint-staged": {
+    "*.{js,jsx,css,ts,tsx}": [
+      "npx eslint --cache --fix --quiet"
+    ],
+    "*": [
+      "npx prettier --config .prettierrc.js --ignore-unknown --write --ignore-path .prettierignore "
+    ]
   }
 }
