--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -39,8 +39,7 @@
     "ui-test": "mocha --no-timeouts -r test/mocha.env.ts -r ts-node/register test/ui/**/*.spec.ts --exit",
     "precommit": "lint-staged",
     "version": "../../.github/scripts/pkg-version.sh templates",
-    "postversion": "../../.github/scripts/pkg-postversion.sh templates",
-    "format-check": "bash ../../.github/scripts/lint-pr.sh $npm_config_source 14"
+    "postversion": "../../.github/scripts/pkg-postversion.sh templates"
   },
   "files": [
     "dist/",
