--- a/packages/failpoint-ts/package.json
+++ b/packages/failpoint-ts/package.json
@@ -39,6 +39,7 @@
     "mocha": "^9.0.2",
     "nyc": "^15.1.0",
     "ts-node": "^10.1.0",
+    "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "ttypescript": "^1.5.12",
     "typescript": "^4.3.5"
