chore: lint fix

--- a/.github/workflows/lint-pr.yml
+++ b/.github/workflows/lint-pr.yml
@@ -39,7 +39,8 @@ jobs:
 
       - name: prettier check files in PR
         run: |
-          npx lerna exec -- bash \$LERNA_ROOT_PATH/.github/scripts/lint-pr.sh ${{ github.event.pull_request.base.ref }}
+          VAR=$(realpath .github/scripts/lint-pr.sh)
+          npx lerna exec -- bash $VAR ${{ github.event.pull_request.base.ref }}
 
       - name: Check if there are changes
         id: changes
