fix: spfx mustache template app name

--- a/packages/fx-core/templates/plugins/resource/spfx/solution/manifest_multi_env.json
+++ b/packages/fx-core/templates/plugins/resource/spfx/solution/manifest_multi_env.json
@@ -11,8 +11,9 @@
         "termsOfUseUrl": "https://www.microsoft.com/en-us/servicesagreement"
     },
     "name": {
-        "short": "<%= componentNameUnescaped %>"
-    },
+        "short": "{{config.manifest.values.appName.short}}",
+        "full": "{{config.manifest.values.appName.full}}"
+},
     "description": {
         "short": "<%= componentNameUnescaped %>",
         "full": "<%= componentNameUnescaped %>"
