feat: update readme, refine default.userdata

--- a/docs/cicd/github-ci-template.yml
+++ b/docs/cicd/github-ci-template.yml
@@ -27,7 +27,7 @@ jobs:
         run: cd tabs && npm ci && npm run build
 
       # Run unit test.
-      # Currently, no opinioned solution for unit test provided during scaffolding, so,
+      # Currently, no opinionated solution for unit test provided during scaffolding, so,
       # set up any unit test framework you prefer (for example, mocha or jest) and update the commands accordingly in below.
       - name: Run Unit Test
         run: cd tabs && npm run test
