--- a/docs/cicd/github-cd-template.yml
+++ b/docs/cicd/github-cd-template.yml
@@ -65,14 +65,10 @@ jobs:
       
       - name: Generate default.userdata
         env:
-          USERDATA_TENANT_ID: ${{ secrets.USERDATA_TENANT_ID }}
-          USERDATA_CLIENT_SECRET: ${{ secrets.USERDATA_CLIENT_SECRET }}
-          USERDATA_BOT_PASSWORD: ${{ secrets.USERDATA_BOT_PASSWORD }}
+          USERDATA_CONTENT: ${{ secrets.USERDATA_CONTENT }}
         run: |
-          [ ! -z "${USERDATA_TENANT_ID}" ] && echo "solution.teamsAppTenantId=${USERDATA_TENANT_ID}" >> .fx/default.userdata
-          [ ! -z "${USERDATA_CLIENT_SECRET}" ] && echo "fx-resource-aad-app-for-teams.clientSecret=${USERDATA_CLIENT_SECRET}" >> .fx/default.userdata
-          [ ! -z "${USERDATA_BOT_PASSWORD}" ] && echo "fx-resource-bot.botPassword=${USERDATA_BOT_PASSWORD}" >> .fx/default.userdata
-
+          [ ! -z "${USERDATA_CONTENT}" ] && echo "${USERDATA_CONTENT}" > .fx/default.userdata
+        
       - name: Deploy to hosting environment
         uses: OfficeDev/teamsfx-cli-action@v1
         with:
