--- a/.github/workflows/lint-pr.yml
+++ b/.github/workflows/lint-pr.yml
@@ -41,7 +41,7 @@ jobs:
         if: ${{ github.event.pull_request.head.repo.full_name != 'OfficeDev/TeamsFx' }}
         run: |
           git remote add -f b https://github.com/OfficeDev/TeamsFx.git
-          git fetch upstream/${{ github.event.pull_request.base.ref }}
+          git fetch upstream ${{ github.event.pull_request.base.ref }}
           VAR=$(realpath .github/scripts/lint-pr.sh)
           npx lerna exec -- bash $VAR upstream/${{ github.event.pull_request.base.ref }}
 
